# socket.io-client-cpp

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakeLists.txt-mingw.patch  conanfile.py  pyproject.toml  run-ci.py  setup.py  ssl.patch
src/: sio_client.cpp  sio_client.h
src/internal/: sio_client_impl.cpp  sio_client_impl.h
test_package/: CMakeLists.txt  conanfile.py  example.cpp
